--- a/index5.html
+++ b/index5.html
@@ -15,14 +15,14 @@
     
     var arr = []
 
-    let max = -1000000000
+    
 
     for(let i = 0; i < 6; i++){
         arr[i] = prompt(`Введите ${i + 1} число`);
     }
 
     for(let i = 0; i < 6; i++) {
-        if (arr[i] > max)
+        if (arr[i] > arr[0])
         max = arr[i];
     }
 
